# ArcanaAI_whole-project

./: .gitignore  .pre-commit-config.yaml  AI_DEVELOPMENT_PROCESS.md  CLAUDE.md  CONTEXT.md  LEGACY_AND_DEFERRED.md  Makefile  README.md  Roadmap_since_0205.md  TECHNICAL_OVERVIEW.md  docker-compose.yml
.claude/: settings.json
Arcana Design System/: README.md  SKILL.md  colors_and_type.css
Electronoverlay-main/: README.md  index.html  (+3 more)
backend/: .env.example  .env.test  Dockerfile  alembic.ini  pyproject.toml  run_backend.sh
backend/arcana/: config.py  database.py  main.py  models.py  vector_store.py
backend/arcana/routers/: conversations.py  files.py  health.py  ingest.py  offline.py  query.py  settings.py
backend/arcana/services/: chunker.py  context_assembler.py  embedder.py  gemini_client.py  github_service.py  granite_vision_client.py  image_captioner.py  ingestion.py  local_embedder.py  local_llm_client.py  local_service.py  notion_chunker.py  notion_extractor.py  notion_service.py  prompt_builder.py  query_service.py  retrieval.py  settings_store.py  traversal.py  vision_analyzer.py  vision_ocr.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_conversations.py  0001_initial_schema.py  0002_phase7_auto_updater.py  0003_phase8_analytics.py  0004_fix_audit_logs_and_data_sources.py
backend/scripts/: 001_create_arcana_tables.sql
backend/tests/: test_embedder_tagging.py  test_image_ingestion.py  test_ingest_mode_guard.py  test_local_embedder.py  test_query_routing.py  test_retrieval.py  test_settings.py
backend/ui/: index.html
(+143 files in other folders)
