[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcana"
version = "0.1.0"
description = "AI-powered developer onboarding platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "chromadb>=0.6.0",
    "google-genai>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.28.0",
    "PyGithub>=2.0",
    "gitpython>=3.1",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tiktoken>=0.8",
    "cryptography>=44.0",
    "python-multipart>=0.0.9",
    "notion-client>=2.0",
    "apscheduler>=3.10",
    "sentence-transformers>=3.0,<5.0",
    "numpy<2",
    "sse-starlette>=2.0",
    "cohere>=5.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["arcana"]
